# music_visualisation_practice

./: .gitignore  CMakeLists.txt  ffmpeg command that works.txt  music_visualizer.cpp
src/: music_visualiser.cpp
